# manager-agents-v1

./: README.md  agents.py  api.py  config.json  documentation.py  main.py  models.py  process_files.py  pyproject.toml  requirements.txt  server.py  setup_docs.py
