[project]
name = "multiagent"
version = "0.1.0"
description = ""
authors = [
    {name = "reeyank",email = "khimanireeyan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.3.2,<0.4.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
